[package]
name = "units"
version = "0.0.1"
authors = ["Patrick Reisert <kpreisert@gmail.com>"]
description = "Units of Measure for Rust. Easy to use, type-safe and customizable."
repository = "https://github.com/Boddlnagg/units"
keywords = ["type-level"]
license = "MIT"

[features]
unstable = []

[dependencies]
tylar = "0.1.0"
